# QuietHire

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  go.work  pyproject.toml  setup.sh  test.sh
.github/workflows/: code-quality.yml  docker-build.yml
apps/api/: Dockerfile  Dockerfile.worker  go.mod  go.sum
apps/api/cmd/api/: main.go
apps/api/cmd/index-jobs/: main.go
apps/api/cmd/init-clickhouse/: main.go
apps/api/cmd/init-typesense/: main.go
apps/api/cmd/schedule-discovery/: main.go
apps/api/cmd/seed-companies/: main.go
apps/api/cmd/test-continuous/: main.go
apps/api/cmd/trigger-discovery/: main.go
apps/api/cmd/worker/: main.go
apps/api/internal/activities/: crawl_activities.go  discovery_activities.go
apps/api/internal/config/: config.go
apps/api/internal/workflows/: crawl_workflow.go  discovery_workflow.go
apps/crawler-go/: Dockerfile  go.mod  go.sum  main.go
apps/crawler-go/parsers/: ashby.go  common.go  greenhouse.go  indeed.go  linkedin.go  notion.go  workday.go
apps/crawler-python/: Dockerfile  main.py  pyproject.toml
apps/email-writer/: main.py  pyproject.toml
apps/manager-extractor/: main.py  pyproject.toml
apps/osint-discovery/: Dockerfile  README.md  main.py  pyproject.toml
apps/parser/: Dockerfile  main.py  pyproject.toml
apps/proxy-manager/: Dockerfile  go.mod  go.sum  main.go
apps/realscore/: main.py  pyproject.toml
config/: prometheus.yml
config/clickhouse/: schema.sql
config/postgres/: osint-schema.sql
docs/: CONTRIBUTING.md  README.md  api.md  architecture.md  overview.md  plan.md
pkg/go-common/: go.mod
pkg/py-common/: pyproject.toml
pkg/py-common/src/py_common/: __init__.py
