[project]
name = "crawler-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "undetected-playwright>=0.3.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[project.dependencies]
py-common = { path = "../../pkg/py-common", editable = true }
