[project]
name = "crawler-python"
version = "0.1.0"
description = "Python stealth crawler service with undetected-playwright"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "undetected-playwright>=0.3.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]
