[project]
name = "email-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
