[project]
name = "osint-discovery"
version = "0.1.0"
description = "OSINT-powered job discovery service for finding companies, career pages, and ATS platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "dnspython>=2.7.0",
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.1",
    "serpapi>=0.1.5",
    "uvicorn>=0.38.0",
    "theHarvester @ git+https://github.com/laramies/theHarvester.git",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]
